@@ -1,1 +1,0 @@
-PKG_ARCH=$(LINUX_VERSION)-x86_64
