@@ -1,0 +1,10 @@
+
+NEEDS_TIRPC=YES
+
+# TIRPC
+TIRPC_PACKAGE_NAME    = tirpc
+TIRPC_VERSION         = 1.3.5
+TIRPC_TOP             = $(PACKAGE_SITE_TOP)/$(TIRPC_PACKAGE_NAME)/$(TIRPC_VERSION)
+TIRPC_LIB             = $(TIRPC_TOP)/$(PKG_ARCH)/lib
+TIRPC_INCLUDE         = $(TIRPC_TOP)/$(PKG_ARCH)/include
+
