@@ -6,11 +6,11 @@
 #  RELEASE.Common.$(T_A)
 #  RELEASE.$(EPICS_HOST_ARCH).$(T_A)
 
-ASYN_MODULE_VERSION=R4.39-1.0.1
-AUTOSAVE_MODULE_VERSION=R5.10-1.0.0
-CAPUTLOG_MODULE_VERSION=R3.7-1.0.0
-IOCADMIN_MODULE_VERSION=R3.1.16-1.3.0
-SCOPE_ASYN_MODULE_VERSION=R1.5.0
+ASYN_MODULE_VERSION = R4.39-1.0.2
+AUTOSAVE_MODULE_VERSION = R5.10-1.0.0
+CAPUTLOG_MODULE_VERSION = R4.0-1.0.0
+IOCADMIN_MODULE_VERSION = R3.1.16-1.4.1
+SCOPE_ASYN_MODULE_VERSION = R1.5.1
 
 # ============================================================
 #  Module Location
