@@ -8,6 +8,9 @@
 #
 #==============================================================
 
+R1.2.9  25-Jun-2025  M. Dunning (mdunning)
+        Bump modules and add tirpc lib to support rhel9 build
+
 R1.2.8  23-Jul-2024  M. Dunning (mdunning)
         Dev: Add new IOC sioc-b34-sc04
 
